IVYPORTAL-8160 Refactor Task Analysis II - Handle feedback : miss alignment tree value of Case/TaskCategory - Fix error cache data in Task/Case Category

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4900,6 +4900,10 @@ _:-ms-input-placeholder, :root .ui-panelgrid .ui-panelgrid-content .ui-grid-row 
 	margin-top: -.15em;
 }
 
+.ui-tree .ui-treenode-leaf-icon {
+  width: 20px !important;
+}
+
 /*********** SEARCH ICON ***********/
 .search-icon-name-container {
   width: 100%;
